# gjs-polkit-agent

./: .gitignore  README.md  flake.nix  gjs-polkit-agent.nix  meson.build
src/: shell-polkit-agent.c  shell-polkit-agent.h
